--- a/questao_2/questao2.ipynb
+++ b/questao_2/questao2.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Untitled0.ipynb",
+      "name": "questao2.ipynb",
       "provenance": []
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "#importando biblioteca\n",
         "import pandas as pd"
       ],
-      "execution_count": 14,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -35,10 +35,116 @@
       },
       "source": [
         "#carregando arquivo apenas as colunas solicitadas\n",
-        "df = pd.read_csv('/content/AB_NYC_2019.csv', usecols = [0, 2, 10, 12, 13])"
+        "df = pd.read_csv('/content/AB_NYC_2019.csv', usecols = [0, 2, 9, 11, 12])"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BE9LT1WIcrKA",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "outputId": "8b86993f-144a-46d2-90d7-1029f6a43cfd"
+      },
+      "source": [
+        "df.head()"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>id</th>\n",
+              "      <th>host_id</th>\n",
+              "      <th>price</th>\n",
+              "      <th>number_of_reviews</th>\n",
+              "      <th>last_review</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>2539</td>\n",
+              "      <td>2787</td>\n",
+              "      <td>149</td>\n",
+              "      <td>9</td>\n",
+              "      <td>2018-10-19</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2595</td>\n",
+              "      <td>2845</td>\n",
+              "      <td>225</td>\n",
+              "      <td>45</td>\n",
+              "      <td>2019-05-21</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>3647</td>\n",
+              "      <td>4632</td>\n",
+              "      <td>150</td>\n",
+              "      <td>0</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>3831</td>\n",
+              "      <td>4869</td>\n",
+              "      <td>89</td>\n",
+              "      <td>270</td>\n",
+              "      <td>2019-07-05</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>5022</td>\n",
+              "      <td>7192</td>\n",
+              "      <td>80</td>\n",
+              "      <td>9</td>\n",
+              "      <td>2018-11-19</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "     id  host_id  price  number_of_reviews last_review\n",
+              "0  2539     2787    149                  9  2018-10-19\n",
+              "1  2595     2845    225                 45  2019-05-21\n",
+              "2  3647     4632    150                  0         NaN\n",
+              "3  3831     4869     89                270  2019-07-05\n",
+              "4  5022     7192     80                  9  2018-11-19"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -51,7 +157,7 @@
         "#salvando em novo arquivo csv\n",
         "df.to_csv(r'/content/colunas_selecionadas.csv', index = False)"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     }
   ]
